tests/bad/comment_not_first.s
.name "coucou"

live %1
.comment "coucou"
